tests: Run the integrations tests against SQ 9.9 (#19)
SonarQube 9.9 runs on JDK 17 so we need to add the --opens options
Set gradle and maven with the exports options needed since jdk 16
Jdk 17 does not support java 6 compilation

When testing with JDK 17 is seems that javac's log now reports only the
first error on a line. Suppress the CheckReturnValue error in the
android activity sample so we get the UseAutoDispose error

Updated the docs for JDK 17/SonarQube 9.9

Stop testing SonarQube 9.7 and 9.8